--- a/src/config.json
+++ b/src/config.json
@@ -1,5 +1,7 @@
 {
     "moduleName": "uni-id",
     "userCollectionName": "uni-id-users",
-    "tokenSecret": "your-pwd-sec"
+    "passwordSecret":"your-password-sec",
+    "tokenSecret": "your-token-sec",
+    "tokenExpiresIn":3600
 }
